--- a/Project1/WebContent/WEB-INF/header.html
+++ b/Project1/WebContent/WEB-INF/header.html
@@ -65,19 +65,19 @@
 						<div class="header_search">
 							<div class="header_search_content">
 								<div class="header_search_form_container">
-									<form action="#" class="header_search_form clearfix">
-										<input type="search" required="required" class="header_search_input" placeholder="Search for products...">
+									<form action="Shop" method="get" class="header_search_form clearfix">
+										<input type="search" required="required" name="search" class="header_search_input" placeholder="Search for products...">
 										<div class="custom_dropdown">
 											<div class="custom_dropdown_list">
 												<span class="custom_dropdown_placeholder clc">All Categories</span>
 												<i class="fas fa-chevron-down"></i>
-												<ul class="custom_list clc">
-													<li><a class="clc" href="#">All Categories</a></li>
-													<li><a class="clc" href="#">Computers</a></li>
-													<li><a class="clc" href="#">Laptops</a></li>
-													<li><a class="clc" href="#">Cameras</a></li>
-													<li><a class="clc" href="#">Hardware</a></li>
-													<li><a class="clc" href="#">Smartphones</a></li>
+												<ul class="custom_list">
+													<li><a class="clc" href="Shop">All Categories</a></li>
+													
+													<li><a class="clc" href="Shop?categorie=laptop">Laptops</a></li>
+													<li><a class="clc" href="Shop?categorie=camera">Cameras</a></li>
+													<li><a class="clc" href="#Shop?categorie=accessoire">Accessories</a></li>
+													<li><a class="clc" href="Shop?categorie=tel">Smartphones</a></li>
 												</ul>
 											</div>
 										</div>
